tests/specs/run/import_common_js/exports_error.js
Object.defineProperty(exports, "__esModule", { value: true });
